# RaspberryPiPicoAS5600

./: CMakeLists.txt  README.md  encoder.c  encoder.h  main.c
include/: encoder.h  sensor.h
src/: encoder.c  sensor.c
